--- a/src/app/pages/memories/components/photo-memory/photo-memory.component.css
+++ b/src/app/pages/memories/components/photo-memory/photo-memory.component.css
@@ -2,17 +2,37 @@
   display: block;
 }
 div{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100vh;
-  background-color: rgb(61, 61, 61);
+  width: 100vw;
+  background-image: linear-gradient(to top right, rgb(255, 0, 153), rgb(0, 187, 255));
 }
 img{
-  width: 100%;
+  width: 60%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .back{
   display: flex;
   align-items: center;
   justify-content: center;
   color: white;
+  width: 60%;
+  background: none;
+}
+.left,
+.right{
+  position: absolute;
+  width: 25%;
+  height: 50%;
+}
+.left{
+  left: 0;
+  bottom: 0;
+}
+.right{
+  right: 0;
+  top: 0;
 }
