--- a/src/app/pages/memories/memories.component.html
+++ b/src/app/pages/memories/memories.component.html
@@ -1,30 +1,44 @@
-<div class="h-100 w-100">
+<div class="h-100 w-100 d-flex flex-column">
   <app-photo-memory
-    photo="/assets/images/IMG-20200226-WA0009.jpg"
+    photo="/assets/images/first.png"
     data-aos="fade-left"
     class="w-100"
   >
     <app-msg-1></app-msg-1>
   </app-photo-memory>
   <app-photo-memory
-    photo="/assets/images/IMG-20200226-WA0009.jpg"
-    text="Testing 1"
-    data-aos-offset="200"
+    photo="/assets/images/second.png"
     data-aos="fade-right"
     class="w-100"
-  ></app-photo-memory>
+  >
+    <app-msg-2></app-msg-2>
+  </app-photo-memory>
   <app-photo-memory
-    photo="/assets/images/IMG-20200226-WA0009.jpg"
-    text="Testing 4"
-    data-aos-offset="200"
+    photo="/assets/images/third.png"
     data-aos="fade-left"
     class="w-100"
-  ></app-photo-memory>
+  >
+    <app-msg-3></app-msg-3>
+  </app-photo-memory>
   <app-photo-memory
-    photo="/assets/images/IMG-20200226-WA0009.jpg"
-    text="Testing 3"
-    data-aos-offset="200"
+    photo="/assets/images/fourth.png"
     data-aos="fade-right"
     class="w-100"
-  ></app-photo-memory>
+  >
+    <app-msg-4></app-msg-4>
+  </app-photo-memory>
+  <app-photo-memory
+    photo="/assets/images/final.png"
+    data-aos="fade-left"
+    class="w-100"
+  >
+    <app-msg-5></app-msg-5>
+  </app-photo-memory>
+  <app-photo-memory
+    photo="/assets/images/finalfinal.jpg"
+    data-aos="fade-left"
+    class="w-100"
+  >
+    <app-msg-6></app-msg-6>
+  </app-photo-memory>
 </div>
